client/src/styles/renku_bootstrap_customization.scss
// Functions: should be imported first
@import "~bootstrap/scss/functions";

// Font
@import "./fonts/fonts";
$font-family-base: "Inter", sans-serif;
$enable-rfs: false; // Disable responsive font sizes that causes

// Variables: note we re-define colors and shadow variables before importing from Bootstrap
$primary: #006e58;
$body-color: #16192c;
$navy: #01192d;
$info: #17a2b8;
$success: #65a30d;
$take-action: #dc3545;
$enable-shadows: true;
$shadow-renku: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
  rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;

// Variables and functions
@import "~bootstrap/scss/variables";
@import "~bootstrap/scss/variables-dark";

// Redefine headers sizes and font-sizes utilities
$h1-font-size: $font-size-base * 2;
$h2-font-size: $font-size-base * 1.5;
$h3-font-size: $font-size-base * 1.25;
$h4-font-size: $font-size-base * 1;
$h5-font-size: $font-size-base * 1;
$h6-font-size: $font-size-base * 1;
$font-sizes: (
  1: $h1-font-size,
  2: $h2-font-size,
  3: $h3-font-size,
  4: $h4-font-size,
  5: $h5-font-size,
  6: $h6-font-size,
);

// Add navy color
$additional-colors: (
  "navy": $navy,
  "take-action": $take-action,
);
$theme-colors: map-merge($theme-colors, $additional-colors);

// Adjust shadows
$card-box-shadow: $shadow-renku;
$dropdown-box-shadow: $shadow-renku;
$input-box-shadow: transparent;

// Adjust Offcanvas
$offcanvas-horizontal-width: 500px;

// Adjust nav tabs
$nav-tabs-link-active-bg: transparent;
$nav-tabs-link-hover-border-color: transparent;
$nav-tabs-link-active-color: $primary;
$nav-link-color: $body-color;
$nav-link-transition: none;
.nav-tabs .nav-link {
  border: 0 !important;
  border-bottom: 2px solid transparent !important;
}
.nav-tabs .nav-link.active {
  border-bottom: 2px solid $nav-tabs-link-active-color !important;
}

// Adjust card and list group colors
$card-cap-bg: transparent;
$list-group-border-color: $card-border-color;

// Adjust card group spacing
$card-cap-padding-y: $spacer;
.card-header {
  border: 0 !important;
  padding-top: $spacer !important;
  padding-bottom: 0 !important;
}
.card-footer {
  border: 0 !important;
}

// Adjust list groups vertical spacing
$list-group-item-padding-y: $spacer;

// Adjust flush list groups spacing and borders when used in cards
.card .list-group-flush {
  border-top: 1px solid $list-group-border-color;

  & > .list-group-item {
    padding-left: 0;
    padding-right: 0;

    &.list-group-item-action {
      &::before {
        bottom: 0;
        content: "";
        left: -$spacer;
        position: absolute;
        right: -$spacer;
        top: 0;
        z-index: -1;
      }
      &:hover::before {
        background-color: $list-group-hover-bg;
      }
    }
  }
}

// Adjust titles in card headers
.card-header {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: $font-weight-semibold;
  }
}

// Make form labels bold
.form-label {
  font-weight: bold;
  margin-bottom: $spacer * 0.25 !important;
}

// Adjust Accordion
$accordion-padding-x: $spacer;
$accordion-body-padding-x: $spacer;
$accordion-button-padding-x: $spacer;

